--- a/src/docs/02_architecture_constraints.adoc
+++ b/src/docs/02_architecture_constraints.adoc
@@ -6,13 +6,14 @@
 [options="header",cols="1,2"]
 |===
 | Restriction | Explanation
-| SOLID | It is an organization wich principal objective decentralize the data in a way that each user has total control over their own data 
+| SOLID | It is an organization which principal objective decentralize the data in a way that each user has total control over their own data 
 | React | It is a Javascript library that allows you to create user interfaces that are simple and easy to reuse. It is an open source software, maintained by Facebook and used by companies such as Airbnb or Instagram
 | Arc42 | They are a set of templates used in the development of a software product. These templates differ from other documentation in that the extension is smaller since by means of diagrams and parts of the code it does not require so much text.
 | GitHub | It is a collaborative software development platform to host projects using the Git version control system
 | Components | In this project 7 components collaborate, contributing with different parts of the project each one and making progress together
 | Project Time | We have 4 months to develop the hole project 
 | Solid Server | Not supporting JSON-LD as serializing format RDF
+| Codacy | It is a tool to measure the code quality 
 | Solid Server | Not supporting queries to navigate in the user POD
 |===
 
