--- a/src/docs/06_runtime_view.adoc
+++ b/src/docs/06_runtime_view.adoc
@@ -19,3 +19,9 @@ This is a general view of how can you see your Routes
 image:images/06_ReadRoutes.png["Get ur Routes"]
 
 
+=== Upload a Route
+
+This is a general view of how upload a route to your pod
+
+
+image:images/06_UploadRoute.png["Upload Routes"]
