--- a/src/docs/10_quality_scenarios.adoc
+++ b/src/docs/10_quality_scenarios.adoc
@@ -1,41 +1,7 @@
 [[section-quality-scenarios]]
 == Quality Requirements
 
-[role="arc42help"]
-****
-
-.Content
-This section contains all quality requirements as quality tree with scenarios. The most important ones have already been described in section 1.2. (quality goals)
-
-Here you can also capture quality requirements with lesser priority,
-which will not create high risks when they are not fully achieved.
-
-.Motivation
-Since quality requirements will have a lot of influence on architectural
-decisions you should know for every stakeholder what is really important to them,
-concrete and measurable.
-****
-
-
-
 === Quality Tree
-
-[role="arc42help"]
-****
-.Content
-The quality tree (as defined in ATAM – Architecture Tradeoff Analysis Method) with quality/evaluation scenarios as leafs.
-
-.Motivation
-The tree structure with priorities provides an overview for a sometimes large number of quality requirements.
-
-.Form
-The quality tree is a high-level overview of the quality goals and requirements:
-
-* tree-like refinement of the term "quality". Use "quality" or "usefulness" as a root
-* a mind map with quality categories as main branches
-
-In any case the tree should include links to the scenarios of the following section.
-****
 
 This development aims to fulfill the quality requirements specified in the following tree diagram.
 
@@ -50,33 +16,9 @@ digraph G {
 }
 ....
 
-image::images/10_quality_tree_extended.png[Quality Tree Extended]
+image::10_quality_tree_extended.png[Quality Tree Extended]
 
 === Quality Scenarios
-
-[role="arc42help"]
-****
-.Contents
-Concretization of (sometimes vague or implicit) quality requirements using (quality) scenarios.
-
-These scenarios describe what should happen when a stimulus arrives at the system.
-
-For architects, two kinds of scenarios are important:
-
-* Usage scenarios (also called application scenarios or use case scenarios) describe the system’s runtime reaction to a certain stimulus. This also includes scenarios that describe the system’s efficiency or performance. Example: The system reacts to a user’s request within one second.
-* Change scenarios describe a modification of the system or of its immediate environment. Example: Additional functionality is implemented or requirements for a quality attribute change.
-
-.Motivation
-Scenarios make quality requirements concrete and allow to
-more easily measure or decide whether they are fulfilled.
-
-Especially when you want to assess your architecture using methods like
-ATAM you need to describe your quality goals (from section 1.2)
-more precisely down to a level of scenarios that can be discussed and evaluated.
-
-.Form
-Tabular or free form text.
-****
 
 Achieving the expected response of the application for the following scenarios is the goal to meet the quality 
 expectations.
@@ -155,9 +97,20 @@ What:: Any new functionality added should be tested to confirm it's well impleme
 How:: Through a battery of unit tests
 ====
 
+===== Scenario #7: User beta testing
+[%collapsible]
+====
+[horizontal]
+Who:: A standard user
+When:: The application is usable
+Where:: Any point of the application
+What:: Try the app and give some feedback
+How:: Through an issue on GitHub
+====
+
 ==== Usability
 
-===== Scenario #7: Colorblind clarity
+===== Scenario #8: Colorblind clarity
 [%collapsible]
 ====
 [horizontal]
@@ -168,7 +121,7 @@ What:: The user interface must be adapted to be easily usable by all the colorbl
 How:: Through the use of a valid palette, icons and texts
 ====
 
-===== Scenario #8: Navigable using keyboard
+===== Scenario #9: Navigable using keyboard
 [%collapsible]
 ====
 [horizontal]
@@ -179,7 +132,7 @@ What:: The user should be able to navigate through the whole application using o
 How:: Thorugh the use of correct shotcuts, tab navegation and mnemonics
 ====
 
-===== Scenario #9: Compatibility with multiple formats
+===== Scenario #10: Compatibility with multiple formats
 [%collapsible]
 ====
 [horizontal]
@@ -190,7 +143,7 @@ What:: The user should be able to import and export the routes to, at least: Geo
 How:: Using the relevant conversors
 ====
 
-===== Scenario #10: New user understanding the application fast
+===== Scenario #11: New user understanding the application fast
 [%collapsible]
 ====
 [horizontal]
@@ -199,4 +152,15 @@ When:: First time using the application
 Where:: GUI
 What:: The user should be able to learn to navigate and use the app instantly
 How:: Keeping a clear and straightforward user interface
+====
+
+===== Scenario #12: Mobile compatibility
+[%collapsible]
+====
+[horizontal]
+Who:: Mobile user
+When:: Using the application
+Where:: The whole application
+What:: The user should be able use the application without problems
+How:: Making the interface and functionality compatible with lesser screens
 ====
